<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="info.littlelin.imagesearcher.activities.SettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/search_setting_title"
        android:id="@+id/tvSettingTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/image_size_label"
        android:id="@+id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spImageSizes"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spImageSizes"
        android:layout_below="@+id/tvSettingTitle"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvImageSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/color_filter_label"
        android:id="@+id/tvColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spColorFilter"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spColorFilter"
        android:layout_below="@+id/spImageSizes"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvImageSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/image_type_label"
        android:id="@+id/tvImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spImageTypes"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spImageTypes"
        android:layout_below="@+id/spColorFilter"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvImageType" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/image_type_label"
        android:id="@+id/tvSite"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/etSite"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSite"
        android:hint="@string/search_site_prompt"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvSite"
        android:layout_below="@+id/spImageTypes"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_label"
        android:id="@+id/btnSave"
        android:layout_below="@+id/etSite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        />

</RelativeLayout>
